@@ -136,6 +136,20 @@ name|lucene
 operator|.
 name|util
 operator|.
+name|NumericUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
 name|StringHelper
 import|;
 end_import
@@ -232,6 +246,249 @@ operator|.
 name|freeze
 argument_list|()
 expr_stmt|;
+block|}
+comment|/** The minimum value that an ip address can hold. */
+DECL|field|MIN_VALUE
+specifier|public
+specifier|static
+specifier|final
+name|InetAddress
+name|MIN_VALUE
+decl_stmt|;
+comment|/** The maximum value that an ip address can hold. */
+DECL|field|MAX_VALUE
+specifier|public
+specifier|static
+specifier|final
+name|InetAddress
+name|MAX_VALUE
+decl_stmt|;
+static|static
+block|{
+name|MIN_VALUE
+operator|=
+name|decode
+argument_list|(
+operator|new
+name|byte
+index|[
+name|BYTES
+index|]
+argument_list|)
+expr_stmt|;
+name|byte
+index|[]
+name|maxValueBytes
+init|=
+operator|new
+name|byte
+index|[
+name|BYTES
+index|]
+decl_stmt|;
+name|Arrays
+operator|.
+name|fill
+argument_list|(
+name|maxValueBytes
+argument_list|,
+operator|(
+name|byte
+operator|)
+literal|0xFF
+argument_list|)
+expr_stmt|;
+name|MAX_VALUE
+operator|=
+name|decode
+argument_list|(
+name|maxValueBytes
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Return the {@link InetAddress} that compares immediately greater than    * {@code address}.    * @throws ArithmeticException if the provided address is the    *              {@link #MAX_VALUE maximum ip address}    */
+DECL|method|nextUp
+specifier|public
+specifier|static
+name|InetAddress
+name|nextUp
+parameter_list|(
+name|InetAddress
+name|address
+parameter_list|)
+block|{
+if|if
+condition|(
+name|address
+operator|.
+name|equals
+argument_list|(
+name|MAX_VALUE
+argument_list|)
+condition|)
+block|{
+throw|throw
+operator|new
+name|ArithmeticException
+argument_list|(
+literal|"Overflow: there is no greater InetAddress than "
+operator|+
+name|address
+operator|.
+name|getHostAddress
+argument_list|()
+argument_list|)
+throw|;
+block|}
+name|byte
+index|[]
+name|delta
+init|=
+operator|new
+name|byte
+index|[
+name|BYTES
+index|]
+decl_stmt|;
+name|delta
+index|[
+name|BYTES
+operator|-
+literal|1
+index|]
+operator|=
+literal|1
+expr_stmt|;
+name|byte
+index|[]
+name|nextUpBytes
+init|=
+operator|new
+name|byte
+index|[
+name|InetAddressPoint
+operator|.
+name|BYTES
+index|]
+decl_stmt|;
+name|NumericUtils
+operator|.
+name|add
+argument_list|(
+name|InetAddressPoint
+operator|.
+name|BYTES
+argument_list|,
+literal|0
+argument_list|,
+name|encode
+argument_list|(
+name|address
+argument_list|)
+argument_list|,
+name|delta
+argument_list|,
+name|nextUpBytes
+argument_list|)
+expr_stmt|;
+return|return
+name|decode
+argument_list|(
+name|nextUpBytes
+argument_list|)
+return|;
+block|}
+comment|/**    * Return the {@link InetAddress} that compares immediately less than    * {@code address}.    * @throws ArithmeticException if the provided address is the    *              {@link #MIN_VALUE minimum ip address}    */
+DECL|method|nextDown
+specifier|public
+specifier|static
+name|InetAddress
+name|nextDown
+parameter_list|(
+name|InetAddress
+name|address
+parameter_list|)
+block|{
+if|if
+condition|(
+name|address
+operator|.
+name|equals
+argument_list|(
+name|MIN_VALUE
+argument_list|)
+condition|)
+block|{
+throw|throw
+operator|new
+name|ArithmeticException
+argument_list|(
+literal|"Underflow: there is no smaller InetAddress than "
+operator|+
+name|address
+operator|.
+name|getHostAddress
+argument_list|()
+argument_list|)
+throw|;
+block|}
+name|byte
+index|[]
+name|delta
+init|=
+operator|new
+name|byte
+index|[
+name|BYTES
+index|]
+decl_stmt|;
+name|delta
+index|[
+name|BYTES
+operator|-
+literal|1
+index|]
+operator|=
+literal|1
+expr_stmt|;
+name|byte
+index|[]
+name|nextDownBytes
+init|=
+operator|new
+name|byte
+index|[
+name|InetAddressPoint
+operator|.
+name|BYTES
+index|]
+decl_stmt|;
+name|NumericUtils
+operator|.
+name|subtract
+argument_list|(
+name|InetAddressPoint
+operator|.
+name|BYTES
+argument_list|,
+literal|0
+argument_list|,
+name|encode
+argument_list|(
+name|address
+argument_list|)
+argument_list|,
+name|delta
+argument_list|,
+name|nextDownBytes
+argument_list|)
+expr_stmt|;
+return|return
+name|decode
+argument_list|(
+name|nextDownBytes
+argument_list|)
+return|;
 block|}
 comment|/** Change the values of this field */
 DECL|method|setInetAddressValue
@@ -795,7 +1052,7 @@ throw|;
 comment|// values are coming from InetAddress
 block|}
 block|}
-comment|/**     * Create a range query for network addresses.    *    * @param field field name. must not be {@code null}.    * @param lowerValue lower portion of the range (inclusive). must not be null.    * @param upperValue upper portion of the range (inclusive). must not be null.    * @throws IllegalArgumentException if {@code field} is null, {@code lowerValue} is null,     *                                  or {@code upperValue} is null    * @return a query matching documents within this range.    */
+comment|/**     * Create a range query for network addresses.    *<p>    * You can have half-open ranges (which are in fact&lt;/&le; or&gt;/&ge; queries)    * by setting {@code lowerValue = InetAddressPoint.MIN_VALUE} or    * {@code upperValue = InetAddressPoint.MAX_VALUE}.    *<p> Ranges are inclusive. For exclusive ranges, pass {@code InetAddressPoint#nextUp(lowerValue)}    * or {@code InetAddressPoint#nexDown(upperValue)}.    *    * @param field field name. must not be {@code null}.    * @param lowerValue lower portion of the range (inclusive). must not be null.    * @param upperValue upper portion of the range (inclusive). must not be null.    * @throws IllegalArgumentException if {@code field} is null, {@code lowerValue} is null,     *                                  or {@code upperValue} is null    * @return a query matching documents within this range.    */
 DECL|method|newRangeQuery
 specifier|public
 specifier|static
