@@ -1282,6 +1282,312 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testNextUp
+specifier|public
+name|void
+name|testNextUp
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|assertEquals
+argument_list|(
+name|InetAddress
+operator|.
+name|getByName
+argument_list|(
+literal|"::1"
+argument_list|)
+argument_list|,
+name|InetAddressPoint
+operator|.
+name|nextUp
+argument_list|(
+name|InetAddress
+operator|.
+name|getByName
+argument_list|(
+literal|"::"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|InetAddress
+operator|.
+name|getByName
+argument_list|(
+literal|"::1:0"
+argument_list|)
+argument_list|,
+name|InetAddressPoint
+operator|.
+name|nextUp
+argument_list|(
+name|InetAddress
+operator|.
+name|getByName
+argument_list|(
+literal|"::ffff"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|InetAddress
+operator|.
+name|getByName
+argument_list|(
+literal|"1.2.4.0"
+argument_list|)
+argument_list|,
+name|InetAddressPoint
+operator|.
+name|nextUp
+argument_list|(
+name|InetAddress
+operator|.
+name|getByName
+argument_list|(
+literal|"1.2.3.255"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|InetAddress
+operator|.
+name|getByName
+argument_list|(
+literal|"0.0.0.0"
+argument_list|)
+argument_list|,
+name|InetAddressPoint
+operator|.
+name|nextUp
+argument_list|(
+name|InetAddress
+operator|.
+name|getByName
+argument_list|(
+literal|"::fffe:ffff:ffff"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|InetAddress
+operator|.
+name|getByName
+argument_list|(
+literal|"::1:0:0:0"
+argument_list|)
+argument_list|,
+name|InetAddressPoint
+operator|.
+name|nextUp
+argument_list|(
+name|InetAddress
+operator|.
+name|getByName
+argument_list|(
+literal|"255.255.255.255"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|ArithmeticException
+name|e
+init|=
+name|expectThrows
+argument_list|(
+name|ArithmeticException
+operator|.
+name|class
+argument_list|,
+parameter_list|()
+lambda|->
+name|InetAddressPoint
+operator|.
+name|nextUp
+argument_list|(
+name|InetAddress
+operator|.
+name|getByName
+argument_list|(
+literal|"ffff:ffff:ffff:ffff:ffff:ffff:ffff:ffff"
+argument_list|)
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Overflow: there is no greater InetAddress than ffff:ffff:ffff:ffff:ffff:ffff:ffff:ffff"
+argument_list|,
+name|e
+operator|.
+name|getMessage
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testNextDown
+specifier|public
+name|void
+name|testNextDown
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|assertEquals
+argument_list|(
+name|InetAddress
+operator|.
+name|getByName
+argument_list|(
+literal|"ffff:ffff:ffff:ffff:ffff:ffff:ffff:fffe"
+argument_list|)
+argument_list|,
+name|InetAddressPoint
+operator|.
+name|nextDown
+argument_list|(
+name|InetAddress
+operator|.
+name|getByName
+argument_list|(
+literal|"ffff:ffff:ffff:ffff:ffff:ffff:ffff:ffff"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|InetAddress
+operator|.
+name|getByName
+argument_list|(
+literal|"::ffff"
+argument_list|)
+argument_list|,
+name|InetAddressPoint
+operator|.
+name|nextDown
+argument_list|(
+name|InetAddress
+operator|.
+name|getByName
+argument_list|(
+literal|"::1:0"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|InetAddress
+operator|.
+name|getByName
+argument_list|(
+literal|"1.2.3.255"
+argument_list|)
+argument_list|,
+name|InetAddressPoint
+operator|.
+name|nextDown
+argument_list|(
+name|InetAddress
+operator|.
+name|getByName
+argument_list|(
+literal|"1.2.4.0"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|InetAddress
+operator|.
+name|getByName
+argument_list|(
+literal|"::fffe:ffff:ffff"
+argument_list|)
+argument_list|,
+name|InetAddressPoint
+operator|.
+name|nextDown
+argument_list|(
+name|InetAddress
+operator|.
+name|getByName
+argument_list|(
+literal|"0.0.0.0"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|InetAddress
+operator|.
+name|getByName
+argument_list|(
+literal|"255.255.255.255"
+argument_list|)
+argument_list|,
+name|InetAddressPoint
+operator|.
+name|nextDown
+argument_list|(
+name|InetAddress
+operator|.
+name|getByName
+argument_list|(
+literal|"::1:0:0:0"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|ArithmeticException
+name|e
+init|=
+name|expectThrows
+argument_list|(
+name|ArithmeticException
+operator|.
+name|class
+argument_list|,
+parameter_list|()
+lambda|->
+name|InetAddressPoint
+operator|.
+name|nextDown
+argument_list|(
+name|InetAddress
+operator|.
+name|getByName
+argument_list|(
+literal|"::"
+argument_list|)
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Underflow: there is no smaller InetAddress than 0:0:0:0:0:0:0:0"
+argument_list|,
+name|e
+operator|.
+name|getMessage
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
